@@ -121,8 +121,21 @@ operator|.
 name|Method
 import|;
 end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|Constants
+import|;
+end_import
 begin_comment
-comment|/** File-based {@link Directory} implementation that uses  *  mmap for reading, and {@link  *  SimpleFSDirectory.SimpleFSIndexOutput} for writing.  *  *<p><b>NOTE</b>: memory mapping uses up a portion of the  * virtual memory address space in your process equal to the  * size of the file being mapped.  Before using this class,  * be sure your have plenty of virtual address space, e.g. by  * using a 64 bit JRE, or a 32 bit JRE with indexes that are  * guaranteed to fit within the address space.  *  *<p>Due to<a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4724038">  * this bug</a> in Sun's JRE, MMapDirectory's {@link IndexInput#close}  * is unable to close the underlying OS file handle.  Only when GC  * finally collects the underlying objects, which could be quite  * some time later, will the file handle be closed.  *  *<p>This will consume additional transient disk usage: on Windows,  * attempts to delete or overwrite the files will result in an  * exception; on other platforms, which typically have a&quot;delete on  * last close&quot; semantics, while such operations will succeed, the bytes  * are still consuming space on disk.  For many applications this  * limitation is not a problem (e.g. if you have plenty of disk space,  * and you don't rely on overwriting files on Windows) but it's still  * an important limitation to be aware of.  *  *<p>This class supplies the workaround mentioned in the bug report  * (disabled by default, see {@link #setUseUnmap}), which may fail on  * non-Sun JVMs. It forcefully unmaps the buffer on close by using  * an undocumented internal cleanup functionality.  * {@link #UNMAP_SUPPORTED} is<code>true</code>, if the workaround  * can be enabled (with no guarantees).  */
+comment|/** File-based {@link Directory} implementation that uses  *  mmap for reading, and {@link  *  SimpleFSDirectory.SimpleFSIndexOutput} for writing.  *  *<p><b>NOTE</b>: memory mapping uses up a portion of the  * virtual memory address space in your process equal to the  * size of the file being mapped.  Before using this class,  * be sure your have plenty of virtual address space, e.g. by  * using a 64 bit JRE, or a 32 bit JRE with indexes that are  * guaranteed to fit within the address space.  * On 32 bit platforms also consult {@link #setMaxChunkSize}  * if you have problems with mmap failing because of fragmented  * address space. If you get an OutOfMemoryException, it is recommened  * to reduce the chunk size, until it works.  *  *<p>Due to<a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4724038">  * this bug</a> in Sun's JRE, MMapDirectory's {@link IndexInput#close}  * is unable to close the underlying OS file handle.  Only when GC  * finally collects the underlying objects, which could be quite  * some time later, will the file handle be closed.  *  *<p>This will consume additional transient disk usage: on Windows,  * attempts to delete or overwrite the files will result in an  * exception; on other platforms, which typically have a&quot;delete on  * last close&quot; semantics, while such operations will succeed, the bytes  * are still consuming space on disk.  For many applications this  * limitation is not a problem (e.g. if you have plenty of disk space,  * and you don't rely on overwriting files on Windows) but it's still  * an important limitation to be aware of.  *  *<p>This class supplies the workaround mentioned in the bug report  * (disabled by default, see {@link #setUseUnmap}), which may fail on  * non-Sun JVMs. It forcefully unmaps the buffer on close by using  * an undocumented internal cleanup functionality.  * {@link #UNMAP_SUPPORTED} is<code>true</code>, if the workaround  * can be enabled (with no guarantees).  */
 end_comment
 begin_class
 DECL|class|MMapDirectory
@@ -211,6 +224,27 @@ name|boolean
 name|useUnmapHack
 init|=
 literal|false
+decl_stmt|;
+DECL|field|maxBBuf
+specifier|private
+name|int
+name|maxBBuf
+init|=
+name|Constants
+operator|.
+name|JRE_IS_64BIT
+condition|?
+name|Integer
+operator|.
+name|MAX_VALUE
+else|:
+operator|(
+literal|256
+operator|*
+literal|1024
+operator|*
+literal|1024
+operator|)
 decl_stmt|;
 comment|/**    *<code>true</code>, if this platform supports unmapping mmaped files.    */
 DECL|field|UNMAP_SUPPORTED
@@ -449,6 +483,48 @@ name|ioe
 throw|;
 block|}
 block|}
+block|}
+comment|/**    * Sets the maximum chunk size (default is {@link Integer#MAX_VALUE} for    * 64 bit JVMs and 256 MiBytes for 32 bit JVMs) used for memory mapping.    * Especially on 32 bit platform, the address space can be very fragmented,    * so large index files cannot be mapped.    * Using a lower chunk size makes the directory implementation a little    * bit slower (as the correct chunk must be resolved on each seek)    * but the chance is higher that mmap does not fail. On 64 bit    * Java platforms, this parameter should always be {@link Integer#MAX_VALUE},    * as the adress space is big enough.    */
+DECL|method|setMaxChunkSize
+specifier|public
+name|void
+name|setMaxChunkSize
+parameter_list|(
+specifier|final
+name|int
+name|maxBBuf
+parameter_list|)
+block|{
+if|if
+condition|(
+name|maxBBuf
+operator|<=
+literal|0
+condition|)
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Maximum chunk size for mmap must be>0"
+argument_list|)
+throw|;
+name|this
+operator|.
+name|maxBBuf
+operator|=
+name|maxBBuf
+expr_stmt|;
+block|}
+comment|/**    * Returns the current mmap chunk size.    * @see #setMaxChunkSize    */
+DECL|method|getMaxChunkSize
+specifier|public
+name|int
+name|getMaxChunkSize
+parameter_list|()
+block|{
+return|return
+name|maxBBuf
+return|;
 block|}
 DECL|class|MMapIndexInput
 specifier|private
@@ -1422,16 +1498,6 @@ expr_stmt|;
 block|}
 block|}
 block|}
-DECL|field|MAX_BBUF
-specifier|private
-specifier|final
-name|int
-name|MAX_BBUF
-init|=
-name|Integer
-operator|.
-name|MAX_VALUE
-decl_stmt|;
 comment|/** Creates an IndexInput for the file with the given name. */
 DECL|method|openInput
 specifier|public
@@ -1482,7 +1548,10 @@ operator|.
 name|length
 argument_list|()
 operator|<=
-name|MAX_BBUF
+operator|(
+name|long
+operator|)
+name|maxBBuf
 operator|)
 condition|?
 operator|(
@@ -1502,7 +1571,7 @@ name|MultiMMapIndexInput
 argument_list|(
 name|raf
 argument_list|,
-name|MAX_BBUF
+name|maxBBuf
 argument_list|)
 return|;
 block|}
